<resources>
    <string name="app_name">ScholarMate</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="yearly_income">Yearly income</string>
    <string name="age">Age</string>
    <string name="tv_feed_bookmark">Bookmarked:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, %1$s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="other">Other</string>
    <string name="nationality">Nationality</string>
    <string name="employment">Employment</string>
    <string name="employed">Employed</string>
    <string name="sign_up">Sign up!</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unemployed">Unemployed</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="gpa">GPA</string>
    <string name="account_details">Account Details</string>
    <string name="scholarmate_logo">Scholarmate logo</string>
    <string name="login">Login</string>
    <string name="_01_01_2000">01/01/2000</string>
    <string name="calendar_image">calendar image</string>
    <string name="filter_by">Filter By:</string>
    <string name="schol_organization_logo">The organization logo</string>
    <string name="schol_alert">Alert</string>
    <string name="schol_bookmark">Bookmark</string>
    <string name="schol_apply">Apply</string>
    <string name="schol_requirements">Requirements</string>
    <string name="schol_about">About</string>
    <string name="scholarship_name">Scholarship Name</string>
    <string name="women">Women</string>
    <string name="canadians">Canadians</string>
    <string name="low_income">Low Income</string>
</resources>