<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ScholarshipInfoActivity"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/textView_schol_name"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_schol_orgName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_schol_amount"
                android:layout_width="115dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="18dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_schol_orgLogo"
                android:layout_width="299dp"
                android:layout_height="77dp"
                android:contentDescription="@string/schol_organization_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageView_schol_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:contentDescription="@string/schol_alert"
                android:gravity="end"
                android:onClick="addAlarm"
                app:backgroundTint="@color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/baseline_add_alert_black_18dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_schol_bookmark"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:contentDescription="@string/schol_bookmark"
                android:gravity="end"
                android:onClick="bookmarkScholarship"
                app:backgroundTint="@color/white"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_bookmark_add" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_schol_about"
            android:layout_width="330dp"
            android:layout_height="26dp"
            android:layout_marginTop="48dp"
            android:text="@string/schol_about"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_schol_aboutTxt"
            android:layout_width="327dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_schol_requirements"
            android:layout_width="330dp"
            android:layout_height="19dp"
            android:layout_marginTop="20dp"
            android:text="@string/schol_requirements"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_schol_requirements"
            android:layout_width="329dp"
            android:layout_height="150dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/button_schol_apply"
            android:layout_width="176dp"
            android:layout_height="47dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/primary_colour_blue"
            android:text="@string/schol_apply" />

    </LinearLayout>

</ScrollView>
